alignments fixed

--- a/src/styles/core/pages/_menuDescription.scss
+++ b/src/styles/core/pages/_menuDescription.scss
@@ -60,4 +60,9 @@
     height: 100%;
     margin: 0 15px;
   }
+
+  .custom-image {
+    display: flex;
+    align-self: center;
+  }
 }
